# building-evaluating-rag

./: pyproject.toml
notebooks/: 1_advanced_rag_pipeline.ipynb  2_rag_triad_of_metrics.ipynb  3_sentence_window_retrieval.ipynb  default.sqlite  pyproject.toml
notebooks/merging_index/: default__vector_store.json  docstore.json  index_store.json
notebooks/sentence_index/: default__vector_store.json  docstore.json  index_store.json
notebooks/sentence_index,/: default__vector_store.json  docstore.json  index_store.json
src/: utils.py
